--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prettier-config",
+  "name": "@iwharris/prettier-config",
   "version": "0.0.1",
   "description": "personal prettier config",
   "main": "index.js",
