--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
   },
   "homepage": "https://github.com/iwharris/prettier-config#readme",
   "devDependencies": {
-    "@types/prettier": "^1.19.1",
-    "prettier": "^1.19.1",
-    "typescript": "^3.9.3"
+    "@types/node": "^22.7.4",
+    "@types/prettier": "^3.0.0",
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.2"
   }
 }
